Fix PolylineNode line segments backface culling issues by applying correct roll